# azureiot

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: iothub.c
